Added Google Fonts and some styling for font in index

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
@@ -67,11 +73,11 @@
         <div class="main-info-container">
           <div class="main-info-text">
             <div class="main-total-item">
-              <p class="total-item-num">2240+</p>
+              <p class="total-item-num bakbak-one">2240+</p>
               <p class="item-num-subheading">Total Item</p>
             </div>
             <div class="main-profiles-whitelist">
-              <p class="profiles-whitelist-num">1000+</p>
+              <p class="profiles-whitelist-num bakbak-one">1000+</p>
               <p class="profiles-whitelist-subheading">Profiles whitelisted</p>
             </div>
           </div>
