Completed Hero Section and added images from ui kit

--- a/catalog.html
+++ b/catalog.html
@@ -24,7 +24,7 @@
       </a>
       <nav>
         <ul class="navbar is-dropdown">
-          <li class="nav-home">
+          <li class="nav-item">
             <a href="./index.html">HOME</a>
           </li>
           <li class="nav-item">
