Complete some sections added images

--- a/catalog.html
+++ b/catalog.html
@@ -15,6 +15,7 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Catalog</title>
+    <link rel="icon" type="image/x-icon" href="./imgs/favicon.svg" />
   </head>
 
   <body>
