--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Home</title>
+    <link rel="icon" type="image/x-icon" href="./imgs/favicon.svg" />
   </head>
 
   <body>
@@ -116,80 +117,134 @@
       <div class="intro-container">
         <section class="nft-card-container">
           <h2 class="hidden-heading">List of nft products</h2>
-          <ul>
+          <ul class="nft-cards-list">
             <li class="nft-card">
-              <img src="#" alt="Icon" class="nft-card-img" />
-              <a href="#" class="nft-card-link">SKISIRS#2</a>
+              <div class="nft-content-container">
+                <img
+                  src="./imgs/nft-card-1.svg"
+                  alt="nft card icon"
+                  width="290"
+                  height="290"
+                  class="nft-card-img"
+                />
+                <a href="#" class="nft-card-link">SKISIRS#2</a>
+              </div>
             </li>
             <li class="nft-card">
-              <img src="#" alt="Icon" class="nft-card-img" />
-              <a href="#" class="nft-card-link">SKISIRS#2</a>
+              <div class="nft-content-container">
+                <img
+                  src="./imgs/nft-card-2.svg"
+                  alt="Icon"
+                  width="290"
+                  height="290"
+                  class="nft-card-img"
+                />
+                <a href="#" class="nft-card-link">SKISIRS#2</a>
+              </div>
             </li>
             <li class="nft-card">
-              <img src="#" alt="Icon" class="nft-card-img" />
-              <a href="#" class="nft-card-link">SKISIRS#2</a>
+              <div class="nft-content-container">
+                <img
+                  src="./imgs/nft-card-3.svg"
+                  alt="Icon"
+                  width="290"
+                  height="290"
+                  class="nft-card-img"
+                />
+                <a href="#" class="nft-card-link">SKISIRS#2</a>
+              </div>
             </li>
             <li class="nft-card">
-              <img src="#" alt="Icon" class="nft-card-img" />
-              <a href="#" class="nft-card-link">SKISIRS#2</a>
+              <div class="nft-content-container">
+                <img
+                  src="./imgs/nft-card-4.svg"
+                  alt="Icon"
+                  width="290"
+                  height="290"
+                  class="nft-card-img"
+                />
+                <a href="#" class="nft-card-link">SKISIRS#2</a>
+              </div>
             </li>
             <li class="nft-card">
-              <img src="#" alt="Icon" class="nft-card-img" />
-              <a href="#" class="nft-card-link">SKISIRS#2</a>
+              <div class="nft-content-container">
+                <img
+                  src="./imgs/nft-card-5.svg"
+                  alt="Icon"
+                  width="290"
+                  height="290"
+                  class="nft-card-img"
+                />
+                <a href="#" class="nft-card-link">SKISIRS#2</a>
+              </div>
             </li>
             <li class="nft-card">
-              <img src="#" alt="Icon" class="nft-card-img" />
-              <a href="#" class="nft-card-link">SKISIRS#2</a>
+              <div class="nft-content-container">
+                <img
+                  src="./imgs/nft-card-6.svg"
+                  alt="Icon"
+                  width="290"
+                  height="290"
+                  class="nft-card-img"
+                />
+                <a href="#" class="nft-card-link">SKISIRS#2</a>
+              </div>
             </li>
           </ul>
         </section>
         <section class="about-container">
-          <h2 class="about-heading">ABOUT US</h2>
-          <p class="about-text">
-            Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occae cat
-            cupidatat non proident, sunt in culpa qui officia dese runt mollit
-            anim id est laborum velit esse cillum dolore eu fugiat nulla pariatu
-            epteur sint occaecat
-          </p>
-          <ol class="about-cards">
-            <li class="about-card-item">
-              <img src="#" alt="Number 1" />
-              <h3 class="about-card-heading">HIGH QUALITY</h3>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and Ipsum
-                typesetting industry.
+          <div class="about-content-container">
+            <div class="about-text-container">
+              <h2 class="about-heading">ABOUT US</h2>
+              <p class="about-text">
+                Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occae cat
+                cupidatat non proident, sunt in culpa qui officia dese runt
+                mollit anim id est laborum velit esse cillum dolore eu fugiat
+                nulla pariatu epteur sint occaecat
               </p>
-            </li>
-            <li class="about-card-item">
-              <img src="#" alt="Number 2" />
-              <h3 class="about-card-heading">BIG COLLECTION</h3>
-
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and Ipsum
-                typesetting industry.
-              </p>
-            </li>
-            <li class="about-card-item">
-              <img src="#" alt="Number 3" />
-              <h3 class="about-card-heading">TOP RESOURCE</h3>
-
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and Ipsum
-                typesetting industry.
-              </p>
-            </li>
-            <li class="about-card-item">
-              <img src="#" alt="Number 4" />
-              <h3 class="about-card-heading">BIG COMMUNITY</h3>
-
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and Ipsum
-                typesetting industry.
-              </p>
-            </li>
-          </ol>
-          <a href="#" class="read-more-btn">READ MORE</a>
+            </div>
+            <ol class="about-cards">
+              <li class="about-card-item">
+                <div class="about-card-heading-container">
+                  <p class="about-card-number">01</p>
+                  <h3 class="about-card-heading">HIGH QUALITY</h3>
+                </div>
+                <p class="about-card-text">
+                  Lorem Ipsum is simply dummy text of the printing and Ipsum
+                  typesetting industry.
+                </p>
+              </li>
+              <li class="about-card-item">
+                <div class="about-card-heading-container">
+                  <h3 class="about-card-heading">BIG COLLECTION</h3>
+                </div>
+                <p class="about-card-text">
+                  Lorem Ipsum is simply dummy text of the printing and Ipsum
+                  typesetting industry.
+                </p>
+              </li>
+              <li class="about-card-item">
+                <div class="about-card-heading-container">
+                  <h3 class="about-card-heading">TOP RESOURCE</h3>
+                </div>
+                <p class="about-card-text">
+                  Lorem Ipsum is simply dummy text of the printing and Ipsum
+                  typesetting industry.
+                </p>
+              </li>
+              <li class="about-card-item">
+                <div class="about-card-heading-container">
+                  <h3 class="about-card-heading">BIG COMMUNITY</h3>
+                </div>
+                <p class="about-card-text">
+                  Lorem Ipsum is simply dummy text of the printing and Ipsum
+                  typesetting industry.
+                </p>
+              </li>
+            </ol>
+            <a href="#" class="read-more-btn">READ MORE</a>
+          </div>
         </section>
         <section class="how-to-container">
           <h2 class="how-to-heading">
