--- a/catalog-item.html
+++ b/catalog-item.html
@@ -15,6 +15,7 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Catalog Item</title>
+    <link rel="icon" type="image/x-icon" href="./imgs/favicon.svg" />
   </head>
   <body>
     <header class="page-header">
