--- a/index.html
+++ b/index.html
@@ -207,7 +207,14 @@
             <ol class="about-cards">
               <li class="about-card-item">
                 <div class="about-card-heading-container">
-                  <p class="about-card-number">01</p>
+                  <svg
+                    width="100"
+                    height="100"
+                    class="about-card-num"
+                    viewBox="0 0 100 100"
+                  >
+                    <text x="0" y="96">01</text>
+                  </svg>
                   <h3 class="about-card-heading">HIGH QUALITY</h3>
                 </div>
                 <p class="about-card-text">
@@ -217,6 +224,14 @@
               </li>
               <li class="about-card-item">
                 <div class="about-card-heading-container">
+                  <svg
+                    width="100"
+                    height="100"
+                    class="about-card-num"
+                    viewBox="0 0 100 100"
+                  >
+                    <text x="0" y="96">02</text>
+                  </svg>
                   <h3 class="about-card-heading">BIG COLLECTION</h3>
                 </div>
                 <p class="about-card-text">
@@ -226,6 +241,14 @@
               </li>
               <li class="about-card-item">
                 <div class="about-card-heading-container">
+                  <svg
+                    width="100"
+                    height="100"
+                    class="about-card-num"
+                    viewBox="0 0 100 100"
+                  >
+                    <text x="0" y="96">03</text>
+                  </svg>
                   <h3 class="about-card-heading">TOP RESOURCE</h3>
                 </div>
                 <p class="about-card-text">
@@ -235,6 +258,14 @@
               </li>
               <li class="about-card-item">
                 <div class="about-card-heading-container">
+                  <svg
+                    width="100"
+                    height="100"
+                    class="about-card-num"
+                    viewBox="0 0 100 100"
+                  >
+                    <text x="0" y="96">04</text>
+                  </svg>
                   <h3 class="about-card-heading">BIG COMMUNITY</h3>
                 </div>
                 <p class="about-card-text">
@@ -247,62 +278,86 @@
           </div>
         </section>
         <section class="how-to-container">
-          <h2 class="how-to-heading">
-            HOW TO <mark class="color-highlight">BINABOX</mark> WORK
-          </h2>
-          <article class="how-to-cards">
-            <ul>
-              <li>
-                <img src="#" alt="Step1" />
-                <h3 class="how-to-card-steps color-highlight">STEP 1</h3>
-                <p class="how-to-card-text">Connect Your Wallet</p>
-              </li>
-              <li>
-                <img src="#" alt="Step2" />
-                <h3 class="how-to-card-steps color-highlight">STEP 2</h3>
-                <p class="how-to-card-text">Select Your Quality</p>
-              </li>
-              <li>
-                <img src="#" alt="Step3" />
-                <h3 class="how-to-card-steps color-highlight">STEP 3</h3>
-                <p class="how-to-card-text">Confirm The Transaction</p>
-              </li>
-              <li>
-                <img src="#" alt="Step4" />
-                <h3 class="how-to-card-steps color-highlight">STEP 4</h3>
-                <p class="how-to-card-text">Receive Your NFTs</p>
-              </li>
-            </ul>
-          </article>
+          <div class="how-to-inner-container">
+            <h2 class="how-to-heading">
+              HOW TO <mark class="color-highlight">BINABOX</mark> WORK
+            </h2>
+            <article class="how-to-cards">
+              <ul class="how-to-card-list">
+                <li class="how-to-card-item">
+                  <img src="./imgs/card-one.svg" alt="Step1" />
+                  <h3 class="how-to-card-steps color-highlight">STEP 1</h3>
+                  <p class="how-to-card-text">Connect Your Wallet</p>
+                </li>
+                <li class="how-to-card-item">
+                  <img src="./imgs/card-two.svg" alt="Step2" />
+                  <h3 class="how-to-card-steps color-highlight">STEP 2</h3>
+                  <p class="how-to-card-text">Select Your Quality</p>
+                </li>
+                <li class="how-to-card-item">
+                  <img src="./imgs/card-three.svg" alt="Step3" />
+                  <h3 class="how-to-card-steps color-highlight">STEP 3</h3>
+                  <p class="how-to-card-text">Confirm The Transaction</p>
+                </li>
+                <li class="how-to-card-item">
+                  <img src="./imgs/card-four.svg" alt="Step4" />
+                  <h3 class="how-to-card-steps color-highlight">STEP 4</h3>
+                  <p class="how-to-card-text">Receive Your NFTs</p>
+                </li>
+              </ul>
+            </article>
+          </div>
         </section>
         <section class="road-map-container">
           <h2 class="road-map-heading">ROAD MAP</h2>
-          <div class="road-map-details">
+          <div class="road-map-details-container">
             <figure class="road-map-imgs">
-              <img src="#" alt="large-img" />
+              <img src="./imgs/roadmap-1.svg" alt="large-img" />
               <div class="road-map-inner-imgs">
-                <img src="#" alt="small-top-img" />
-                <img src="#" alt="small-bot-img" />
+                <img src="./imgs/roadmap-2.svg" alt="small-top-img" />
+                <img src="./imgs/roadmap-3.svg" alt="small-bot-img" />
               </div>
             </figure>
             <section class="road-map-stage-info">
-              <h3>PHASE <span class="road-map-phase-stage">1</span></h3>
+              <h3 class="road-map-details-heading">
+                PHASE <span class="road-map-phase-stage">1</span>
+              </h3>
               <ul class="road-map-details">
                 <li class="road-map-details-item">
-                  <img src="#" alt="Logo Icon" />
-                  Befriending & Chat Functions
+                  <img
+                    src="./imgs/road-map-logo.svg"
+                    alt="Logo Icon"
+                    width="24"
+                    height="24"
+                  />
+                  <p class="road-map-text">Befriending & Chat Functions</p>
                 </li>
                 <li class="road-map-details-item">
-                  <img src="#" alt="Logo Icon" />
-                  Challenging Feature
+                  <img
+                    src="./imgs/road-map-logo.svg"
+                    alt="Logo Icon"
+                    width="24"
+                    height="24"
+                  />
+                  <p class="road-map-text">Challenging Feature</p>
                 </li>
                 <li class="road-map-details-item">
-                  <img src="#" alt="Logo Icon" />
-                  Corsair Wheel
+                  <img
+                    src="./imgs/road-map-logo.svg"
+                    alt="Logo Icon"
+                    width="24"
+                    height="24"
+                  />
+                  <p class="road-map-text">Corsair Wheel</p>
                 </li>
                 <li class="road-map-details-item">
-                  <img src="#" alt="Logo Icon" />
-                  Mobile Version Launch
+                  <img
+                    src="./imgs/road-map-logo.svg"
+                    alt="Logo Icon"
+                    width="24"
+                    height="24"
+                  />
+                  <p class="road-map-text">Mobile Version Launch</p>
                 </li>
               </ul>
               <a href="#" class="read-more-btn">READ MORE</a>
