Added phase slider added glowing corners added nav down arrow fixed some positioning and sizing

--- a/index.html
+++ b/index.html
@@ -74,45 +74,47 @@
     </header>
     <main>
       <section class="main-container">
-        <div class="main-inner-container">
-          <div class="main-text-container">
-            <h1 class="hidden-heading">BINABOX NFT's</h1>
-            <h2 class="main-heading">
-              WITH <mark class="color-highlight">BINABOX</mark> EXPLORE <br />
-              NFT COLLECTION
-            </h2>
-            <p class="main-text">
-              We are the best way to check the rarity of NFT collection
-            </p>
-          </div>
-          <div class="main-info-container">
-            <div class="main-info-text">
-              <div class="main-total-item">
-                <p class="total-item-num bakbak-one">2240+</p>
-                <p class="item-num-subheading">Total Item</p>
+        <div class="main-test">
+          <div class="main-inner-container">
+            <div class="main-text-container">
+              <h1 class="hidden-heading">BINABOX NFT's</h1>
+              <h2 class="main-heading">
+                WITH <mark class="color-highlight">BINABOX</mark> EXPLORE <br />
+                NFT COLLECTION
+              </h2>
+              <p class="main-text">
+                We are the best way to check the rarity of NFT collection
+              </p>
+            </div>
+            <div class="main-info-container">
+              <div class="main-info-text">
+                <div class="main-total-item">
+                  <p class="total-item-num bakbak-one">2240+</p>
+                  <p class="item-num-subheading">Total Item</p>
+                </div>
+                <div class="main-profiles-whitelist">
+                  <p class="profiles-whitelist-num bakbak-one">1000+</p>
+                  <p class="profiles-whitelist-subheading">
+                    Profiles whitelisted
+                  </p>
+                </div>
               </div>
-              <div class="main-profiles-whitelist">
-                <p class="profiles-whitelist-num bakbak-one">1000+</p>
-                <p class="profiles-whitelist-subheading">
-                  Profiles whitelisted
-                </p>
+              <div class="main-container-btn">
+                <a href="#" class="connect-wallet-btn">CONNECT WALLET</a>
+                <a href="#" class="main-whitelist-btn whitelist-btn"
+                  >WHITELIST NOW</a
+                >
               </div>
             </div>
-            <div class="main-container-btn">
-              <a href="#" class="connect-wallet-btn">CONNECT WALLET</a>
-              <a href="#" class="main-whitelist-btn whitelist-btn"
-                >WHITELIST NOW</a
-              >
-            </div>
           </div>
+          <img
+            src="./imgs/binabox-cube.svg"
+            alt="BinaBox Cube"
+            width="970"
+            height="846"
+            class="main-img"
+          />
         </div>
-        <img
-          src="./imgs/binabox-cube.svg"
-          alt="BinaBox Cube"
-          width="970"
-          height="846"
-          class="main-img"
-        />
       </section>
       <div class="intro-container">
         <section class="nft-card-container">
@@ -205,7 +207,7 @@
               </p>
             </div>
             <ol class="about-cards">
-              <li class="about-card-item">
+              <li class="about-card-item glow-container">
                 <div class="about-card-heading-container">
                   <svg
                     width="100"
@@ -364,26 +366,30 @@
             </section>
           </div>
           <div class="phase-slider-container">
-            <button class="back-arrow-btn">&lt;</button>
+            <button class="back-arrow-btn">
+              <img src="./imgs/arrow-left-1.svg" alt="arrow left"  width="24" height="24"/>
+            </button>
             <ol class="phase-line">
               <li class="phase-stage">
-                <img src="#" alt="phase-circle is-phase-stage" />
+                <div class="phase-ellipse"></div>
                 <p>PHASE 1</p>
               </li>
               <li class="phase-stage">
-                <img src="#" alt="phase-circle is-phase-stage" />
+                <div class="phase-ellipse"></div>
                 <p>PHASE 2</p>
               </li>
               <li class="phase-stage">
-                <img src="#" alt="phase-circle is-phase-stage" />
+                <div class="phase-ellipse"></div>
                 <p>PHASE 3</p>
               </li>
               <li class="phase-stage">
-                <img src="#" alt="phase-circle is-phase-stage" />
+                <div class="phase-ellipse"></div>
                 <p>PHASE 4</p>
               </li>
             </ol>
-            <button class="forward-arrow-btn">&gt;</button>
+            <button class="forward-arrow-btn">
+              <img src="./imgs/arrow-right-1.svg" alt="arrow right" width="24" height="24"/>
+            </button>
           </div>
         </section>
       </div>
@@ -418,7 +424,7 @@
               </li>
             </ul>
           </div>
-          <div class="profile-card">
+          <div class="profile-card glow-container">
             <img src="#" alt="Profile Icon" />
             <h3 class="profile-name">Jason Smith</h3>
             <p class="profile-position">Co - Founder</p>
