Modified Homepage minimized css fixes + changes
todo: radial Gradient on bottom

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             </h2>
             <article class="how-to-cards">
               <ul class="how-to-card-list">
-                <li class="how-to-card-item">
+                <li class="how-to-card-item glow-container">
                   <img src="./imgs/card-one.svg" alt="Step1" />
                   <h3 class="how-to-card-steps color-highlight">STEP 1</h3>
                   <p class="how-to-card-text">Connect Your Wallet</p>
@@ -698,6 +698,7 @@
             </details>
             <details class="faqs-details">
               <summary class="faqs-query is-expand">How Do I Get NFTs?</summary>
+              <hr />
               <p class="faqs-text">
                 Urna vitae erat et lacus, consectetur ac nulla vestibulum
                 lobortis. Nulla dapibus urna volutpat venenatis, risus faucibus.
@@ -707,6 +708,7 @@
               <summary class="faqs-query is-expand">
                 How Can We Buy Your NFTs?
               </summary>
+              <hr />
               <p class="faqs-text">
                 Urna vitae erat et lacus, consectetur ac nulla vestibulum
                 lobortis. Nulla dapibus urna volutpat venenatis, risus faucibus.
@@ -716,6 +718,7 @@
               <summary class="faqs-query is-expand">
                 Who Are The Team Behind The Project?
               </summary>
+              <hr />
               <p class="faqs-text">
                 Urna vitae erat et lacus, consectetur ac nulla vestibulum
                 lobortis. Nulla dapibus urna volutpat venenatis, risus faucibus.
