Added Catalog Page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins&display=swap"
       rel="stylesheet"
     />
-
     <link
       rel="stylesheet"
       href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
@@ -18,8 +17,7 @@
     <title>Home</title>
     <link rel="icon" type="image/x-icon" href="./imgs/favicon.svg" />
   </head>
-
-  <body>
+  <body class="home-page">
     <header class="page-header">
       <a href="./index.html" class="nav-logo">
         <img
@@ -43,7 +41,7 @@
             <a href="#">ROADMAP</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-collection-link">COLLECTION</a>
+            <a href="#">COLLECTION</a>
           </li>
           <li class="nav-item">
             <a href="#">FAQS</a>
@@ -747,7 +745,10 @@
           </a>
           <a href="#" class="community-whitelist-btn"> WHITELIST NOW </a>
         </div>
-        <!-- Here Goes Subscribe :) -->
+        <div class="subscribe-container">
+          <input type="text" id="subscribe" class="subscribe-input" placeholder="Enter your email">
+          <button class="subscribe-btn">SUBSCRIBE</button>
+        </div>
         <ul class="community-social-list">
           <li class="community-social-item">
             <a href="#"
