Completed catalog item page

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -74,7 +74,7 @@
     <main>
       <section class="page-banner">
         <div class="banner-text-container">
-          <h1 class="banner-heading">ITEM DETAILS</h1>
+          <h1 class="banner-heading">ITEM DETAIL</h1>
           <ul class="banner-list">
             <li class="banner-item">
               <a href="./index.html" class="banner-link">HOME</a>
@@ -87,35 +87,38 @@
       </section>
       <div class="product-container">
         <figure class="product-img">
-          <img src="#" alt="Product" />
+          <img
+            src="./imgs/skeleton.svg"
+            alt="very descriptive product image alt :>"
+          />
           <div class="countdown">
             <p class="countdown-heading">PUBLIC END IN</p>
             <ul class="countdown-list">
               <li class="countdown-item">
                 <div class="countdown-day">
-                  <p class="day-time">16</p>
-                  <p class="time-tag"></p>
+                  <p class="day-time countdown-time">16</p>
+                  <p class="time-tag">DAYS</p>
                 </div>
               </li>
               <li class="countdown-spacer">:</li>
               <li class="countdown-item">
                 <div class="countdown-hour">
-                  <p class="hour-time">20</p>
-                  <p class="time-tag"></p>
+                  <p class="hour-time countdown-time">20</p>
+                  <p class="time-tag">HOURS</p>
                 </div>
               </li>
               <li class="countdown-spacer">:</li>
               <li class="countdown-item">
                 <div class="countdown-minute">
-                  <p class="minute-time">11</p>
-                  <p class="time-tag"></p>
+                  <p class="minute-time countdown-time">11</p>
+                  <p class="time-tag">MINUTES</p>
                 </div>
               </li>
               <li class="countdown-spacer">:</li>
               <li class="countdown-item">
                 <div class="countdown-second">
-                  <p class="second-time">08</p>
-                  <p class="time-tag"></p>
+                  <p class="second-time countdown-time">08</p>
+                  <p class="time-tag">SECONDS</p>
                 </div>
               </li>
             </ul>
@@ -128,62 +131,130 @@
             unique skins drawn from the different missions and challenges he
             faced throughout his life.
           </p>
-          <dl>
-            <dt>Clothing</dt>
-            <dd>SNAKE</dd>
-            <dt>Eyes</dt>
-            <dd>MIX</dd>
-            <dt>Face</dt>
-            <dd>GREEN</dd>
-            <dt>Skin</dt>
-            <dd>GREEN</dd>
-            <dt>Background</dt>
-            <dd>Green Light</dd>
-            <dt>Special</dt>
-            <dd>CAT</dd>
+          <dl class="tags-container">
+            <div class="tag-container">
+              <dt>Clothing</dt>
+              <dd>SNAKE</dd>
+            </div>
+            <div class="tag-container">
+              <dt>Eyes</dt>
+              <dd>MIX</dd>
+            </div>
+            <div class="tag-container">
+              <dt>Face</dt>
+              <dd>GREEN</dd>
+            </div>
+            <div class="tag-container">
+              <dt>Skin</dt>
+              <dd>GREEN</dd>
+            </div>
+            <div class="tag-container">
+              <dt>Background</dt>
+              <dd>Green Light</dd>
+            </div>
+            <div class="tag-container">
+              <dt>Special</dt>
+              <dd>CAT</dd>
+            </div>
           </dl>
           <p class="product-price">
             PRICE: <mark class="color-highlight">0.15 ETH</mark>
           </p>
           <button class="product-buy-btn">
-            <img src="#" alt="BagIcon" />BUY ON OPENSEA
+            <img src="./imgs/bag.svg" alt="BagIcon" />BUY ON OPENSEA
           </button>
-          <a href="#" class="discord-link"
-            ><img src="#" alt="DiscordIcon" />Discord</a
-          >
-          <a href="#" class="twitter-link"
-            ><img src="#" alt="TwitterIcon" />Twitter</a
-          >
+          <div class="invitation-container">
+            <a href="#" class="discord-link"
+              ><img
+                src="./imgs/discord-original.svg"
+                alt="DiscordIcon"
+                width="24"
+                height="24"
+              />JOIN DISCORD</a
+            >
+            <a href="#" class="twitter-link"
+              ><img
+                src="./imgs/twitter-1.svg"
+                alt="TwitterIcon"
+                width="24"
+                height="24"
+              />JOIN TWITTER</a
+            >
+          </div>
         </section>
       </div>
       <section class="collections-container">
-        <h2 class="hidden-heading">Collection of nft products</h2>
-        <ul>
+        <h2 class="collections-heading">EXPLORE COLLECTIONS</h2>
+        <ul class="collection-cards">
           <li class="collection-card">
-            <img src="#" alt="Icon" class="collection-card-img" />
-            <a class="card-link">SKISIRS#2</a>
+            <div class="nft-content-container">
+              <img
+                src="./imgs/nft-card-1.svg"
+                alt="good alt description"
+                class="collection-card-img"
+              />
+              <a class="card-link">SKISIRS#2</a>
+            </div>
           </li>
           <li class="collection-card">
-            <img src="#" alt="Icon" class="collection-card-img" />
-            <a class="card-link">SKISIRS#2</a>
+            <div class="nft-content-container">
+              <img
+                src="./imgs/nft-card-2.svg"
+                alt="good alt description"
+                class="collection-card-img"
+              />
+              <a class="card-link">SKISIRS#2</a>
+            </div>
           </li>
           <li class="collection-card">
-            <img src="#" alt="Icon" class="collection-card-img" />
-            <a class="card-link">SKISIRS#2</a>
+            <div class="nft-content-container">
+              <img
+                src="./imgs/nft-card-3.svg"
+                alt="good alt description"
+                class="collection-card-img"
+              />
+              <a class="card-link">SKISIRS#2</a>
+            </div>
           </li>
           <li class="collection-card">
-            <img src="#" alt="Icon" class="collection-card-img" />
-            <a class="card-link">SKISIRS#2</a>
+            <div class="nft-content-container">
+              <img
+                src="./imgs/nft-card-4.svg"
+                alt="good alt description"
+                class="collection-card-img"
+              />
+              <a class="card-link">SKISIRS#2</a>
+            </div>
           </li>
           <li class="collection-card">
-            <img src="#" alt="Icon" class="collection-card-img" />
-            <a class="card-link">SKISIRS#2</a>
+            <div class="nft-content-container">
+              <img
+                src="./imgs/nft-card-5.svg"
+                alt="good alt description"
+                class="collection-card-img"
+              />
+              <a class="card-link">SKISIRS#2</a>
+            </div>
           </li>
           <li class="collection-card">
-            <img src="#" alt="Icon" class="collection-card-img" />
-            <a class="card-link">SKISIRS#2</a>
+            <div class="nft-content-container">
+              <img
+                src="./imgs/nft-card-6.svg"
+                alt="good alt description"
+                class="collection-card-img"
+              />
+              <a class="card-link">SKISIRS#2</a>
+            </div>
           </li>
         </ul>
+        <div class="scroll-btns">
+          <button class="collection-back-btn">
+            <img src="./imgs/arrow-left-3.svg" alt="" />
+          </button>
+          <button class="collection-forward-btn">
+            <img src="./imgs/arrow-right-3.svg" alt="">
+          </button>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
