Changed some image types

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -89,7 +89,7 @@
         <figure class="product-img">
           <img
             src="./imgs/skeleton.svg"
-            alt="very descriptive product image alt :>"
+            alt="very descriptive product alt :>"
           />
           <div class="countdown">
             <p class="countdown-heading">PUBLIC END IN</p>
