--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
           </div>
           <img
-            src="./imgs/binabox-cube.svg"
+            src="./imgs/binabox-cube.png"
             alt="BinaBox Cube"
             width="970"
             height="846"
@@ -122,7 +122,7 @@
             <li class="nft-card">
               <div class="nft-content-container">
                 <img
-                  src="./imgs/nft-card-1.svg"
+                  src="./imgs/nft-card-1.jpg"
                   alt="nft card icon"
                   width="290"
                   height="290"
@@ -134,7 +134,7 @@
             <li class="nft-card">
               <div class="nft-content-container">
                 <img
-                  src="./imgs/nft-card-2.svg"
+                  src="./imgs/nft-card-2.jpg"
                   alt="Icon"
                   width="290"
                   height="290"
@@ -146,7 +146,7 @@
             <li class="nft-card">
               <div class="nft-content-container">
                 <img
-                  src="./imgs/nft-card-3.svg"
+                  src="./imgs/nft-card-3.jpg"
                   alt="Icon"
                   width="290"
                   height="290"
@@ -158,7 +158,7 @@
             <li class="nft-card">
               <div class="nft-content-container">
                 <img
-                  src="./imgs/nft-card-4.svg"
+                  src="./imgs/nft-card-4.jpg"
                   alt="Icon"
                   width="290"
                   height="290"
@@ -170,7 +170,7 @@
             <li class="nft-card">
               <div class="nft-content-container">
                 <img
-                  src="./imgs/nft-card-5.svg"
+                  src="./imgs/nft-card-5.jpg"
                   alt="Icon"
                   width="290"
                   height="290"
@@ -182,7 +182,7 @@
             <li class="nft-card">
               <div class="nft-content-container">
                 <img
-                  src="./imgs/nft-card-6.svg"
+                  src="./imgs/nft-card-6.jpg"
                   alt="Icon"
                   width="290"
                   height="290"
@@ -313,10 +313,10 @@
           <h2 class="road-map-heading">ROAD MAP</h2>
           <div class="road-map-details-container">
             <figure class="road-map-imgs">
-              <img src="./imgs/roadmap-1.svg" alt="large-img" />
+              <img src="./imgs/roadmap-1.jpg" alt="large-img" />
               <div class="road-map-inner-imgs">
-                <img src="./imgs/roadmap-2.svg" alt="small-top-img" />
-                <img src="./imgs/roadmap-3.svg" alt="small-bot-img" />
+                <img src="./imgs/roadmap-2.jpg" alt="small-top-img" />
+                <img src="./imgs/roadmap-3.jpg" alt="small-bot-img" />
               </div>
             </figure>
             <section class="road-map-stage-info">
@@ -409,7 +409,7 @@
             <div class="profile-cards">
               <div class="profile-row">
                 <div class="profile-card">
-                  <img src="./imgs/profile-1.svg" alt="Profile Icon" />
+                  <img src="./imgs/profile-1.png" alt="Profile Icon" />
                   <div class="profile-details">
                     <h3 class="profile-name">Ralph Edwards</h3>
                     <p class="profile-position">Founder</p>
@@ -438,7 +438,7 @@
                   </ul>
                 </div>
                 <div class="profile-card glow-container">
-                  <img src="./imgs/profile-2.svg" alt="Profile Icon" />
+                  <img src="./imgs/profile-2.png" alt="Profile Icon" />
                   <div class="profile-details">
                     <h3 class="profile-name">Jason Smith</h3>
                     <p class="profile-position">Co - Founder</p>
@@ -467,7 +467,7 @@
                   </ul>
                 </div>
                 <div class="profile-card">
-                  <img src="./imgs/profile-3.svg" alt="Profile Icon" />
+                  <img src="./imgs/profile-3.png" alt="Profile Icon" />
                   <div class="profile-details">
                     <h3 class="profile-name">Tony Wings</h3>
                     <p class="profile-position">Web Designer</p>
@@ -496,7 +496,7 @@
                   </ul>
                 </div>
                 <div class="profile-card">
-                  <img src="./imgs/profile-4.svg" alt="Profile Icon" />
+                  <img src="./imgs/profile-4.png" alt="Profile Icon" />
                   <div class="profile-details">
                     <h3 class="profile-name">Esther Howard</h3>
                     <p class="profile-position">Project Manager</p>
@@ -527,7 +527,7 @@
               </div>
               <div class="profile-row">
                 <div class="profile-card">
-                  <img src="./imgs/profile-5.svg" alt="Profile Icon" />
+                  <img src="./imgs/profile-5.png" alt="Profile Icon" />
                   <div class="profile-details">
                     <h3 class="profile-name">Jenny Wilson</h3>
                     <p class="profile-position">Artist</p>
@@ -556,7 +556,7 @@
                   </ul>
                 </div>
                 <div class="profile-card">
-                  <img src="./imgs/profile-6.svg" alt="Profile Icon" />
+                  <img src="./imgs/profile-6.png" alt="Profile Icon" />
                   <div class="profile-details">
                     <h3 class="profile-name">Robert Fox</h3>
                     <p class="profile-position">UI/UX Designer</p>
@@ -585,7 +585,7 @@
                   </ul>
                 </div>
                 <div class="profile-card">
-                  <img src="./imgs/profile-7.svg" alt="Profile Icon" />
+                  <img src="./imgs/profile-7.png" alt="Profile Icon" />
                   <div class="profile-details">
                     <h3 class="profile-name">Devon Lane</h3>
                     <p class="profile-position">Ux Architect</p>
